--- a/FGM/Views/Bookie/BookieConfirm.cshtml
+++ b/FGM/Views/Bookie/BookieConfirm.cshtml
@@ -21,14 +21,14 @@
                     <label for="matchdate">ပွဲကစားမည့်နေ့</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
-                            <button style="color:white" class="btn btn-danger" onclick="GetPrevMonth();" type="button">
+                            <button style="color:white" class="btn btn-danger" onclick="GetPrevMatch();" type="button">
                                 ☜
                             </button>
                             <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
                         </div>
                         <input readonly="readonly" type="text" class="form-control float-right" id="matchdate">
                         <div class="input-group-append">
-                            <button style="color:white" class="btn btn-danger" onclick="GetNextMonth();" type="button">
+                            <button style="color:white" class="btn btn-danger" onclick="GetNextMatch();" type="button">
                                 ☞
                             </button>
                         </div>
@@ -141,7 +141,7 @@
 
             $('#MatchTime').select2();
 
-            GetLastMonth();
+            GetLastMatch();
 
             $("tbody", "#tblMatch").on("click", "td",
                 function () {
@@ -159,7 +159,7 @@
                 });
         });
 
-        function GetLastMonth() {
+        function GetLastMatch() {
             $.ajax({
                 url: '@Url.Action("GetLastMatch", "Match")?MatchDate=' + $("#matchdate").val(),
                 type: "GET",
@@ -190,7 +190,7 @@
             })
         }
 
-        function GetPrevMonth() {
+        function GetPrevMatch() {
             $.ajax({
                 url: '@Url.Action("GetPrevMatch", "Match")?MatchDate=' + $("#matchdate").val(),
                 type: "GET",
@@ -221,7 +221,7 @@
             })
         }
 
-        function GetNextMonth() {
+        function GetNextMatch() {
             $.ajax({
                 url: '@Url.Action("GetNextMatch", "Match")?MatchDate=' + $("#matchdate").val(),
                 type: "GET",
