--- a/FGM/Views/Odds/OddsEntry.cshtml
+++ b/FGM/Views/Odds/OddsEntry.cshtml
@@ -10,167 +10,40 @@
 }
 
 <!-- Main content -->
-<section class="content">
-    <input id="UserID" type="hidden">
-    <div class="card">
-        <div class="card-body">
-            <div class="form-row">
-                <div class="form-group col-xl-3 col-md-4">
-                    <label for="matchdate">ပွဲကစားသည့်နေ့</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button style="color:white" class="btn btn-danger" onclick="GetPrevMonth();" type="button">
-                                ☜
-                            </button>
-                            <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
-                        </div>
-                        <input readonly="readonly" type="text" class="form-control float-right" id="matchdate">
-                        <div class="input-group-append">
-                            <button style="color:white" class="btn btn-danger" onclick="GetNextMonth();" type="button">
-                                ☞
-                            </button>
+    <section class="content">
+        <input id="UserID" type="hidden">
+        <div class="card">
+            <div class="card-body">
+                <div class="form-row">
+                    <div class="form-group col-xl-3 col-md-4">
+                        <label for="matchdate">ပွဲကစားသည့်နေ့</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <button style="color:white" class="btn btn-danger" onclick="GetPrevMatch();" type="button">
+                                    ☜
+                                </button>
+                                <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
+                            </div>
+                            <input readonly="readonly" type="text" class="form-control float-right" id="matchdate">
+                            <div class="input-group-append">
+                                <button style="color:white" class="btn btn-danger" onclick="GetNextMatch();" type="button">
+                                    ☞
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">
-                <!-- AREA CHART -->
-                <div class="card card-primary collapsed-card">
-                    <div class="card-header">
-                        <h3 class="card-title">Area Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chart">
-                            <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                            <canvas id="areaChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                        </div>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-                <!-- DONUT CHART -->
-                <div class="card card-danger">
-                    <div class="card-header">
-                        <h3 class="card-title">Donut Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                        <canvas id="donutChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-                <!-- PIE CHART -->
-                <div class="card card-danger">
-                    <div class="card-header">
-                        <h3 class="card-title">Pie Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                        <canvas id="pieChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
+            <div id="div1" class="col-xl-6">
 
             </div>
-            <!-- /.col (LEFT) -->
-            <div class="col-md-6">
-                <!-- LINE CHART -->
-                <div class="card card-info">
-                    <div class="card-header">
-                        <h3 class="card-title">Line Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chart">
-                            <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                            <canvas id="lineChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                        </div>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-                <!-- BAR CHART -->
-                <div class="card card-success">
-                    <div class="card-header">
-                        <h3 class="card-title">Bar Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chart">
-                            <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                            <canvas id="barChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                        </div>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-                <!-- STACKED BAR CHART -->
-                <div class="card card-success">
-                    <div class="card-header">
-                        <h3 class="card-title">Stacked Bar Chart</h3>
-
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="chart">
-                            <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                            <canvas id="stackedBarChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 412px;" width="824" height="500" class="chartjs-render-monitor"></canvas>
-                        </div>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
+            <div id="div2" class="col-xl-6">
 
             </div>
-            <!-- /.col (RIGHT) -->
         </div>
-        <!-- /.row -->
-    </div>
-</section>
+    </section>
 
 @section Scripts{
     <script src="@Url.Content("~/plugins/daterangepicker/moment.min.js")"></script>
@@ -184,7 +57,172 @@
                 locale: {
                     format: 'DD-MM-YYYY'
                 }
-            });          
+            });
+
+            GetLastMatch();
+
+        });
+
+        function BindMatch() {
+            $.ajax({
+                url: '@Url.Action("GetMatch", "Match")?MatchDate='+$("#matchdate").val()+'',
+                type: "GET",
+                dataType: "JSON",
+                dataSrc: '',
+                success: function (res) {
+                    BindToTable(res);
+                }
+            })
+        }
+
+        function BindToTable(res) {
+            $("#div1").empty();
+            $("#div2").empty();
+
+            var card;
+            var divid = '1';
+            $.each(res, function (key, value) {
+                card = '<div class="card card-primary" id="'+value.MatchID+'>' +
+                    '<div class="card-body">' +
+                    '<table id="tblMatch'+value.MatchID+'" class="table table-bordered table-striped">' +
+                    '<thead>' +
+                    '<tr>' +
+                    '<th style="width:20%">'+value.MatchTime+'</th>' +
+                    '<th style="width:33%">'+value.Home+'</th>' +
+                    '<th style="width:32%">' + value.Away + '</th>' +
+                    '<th style="width:15">ဂိုးပေါင်း</th>'+
+                    '</tr>' +
+                    '</thead>' +
+                    '<tbody></tbody>' +
+                    '<tfoot>' +
+                    '</tfoot>' +
+                    '</table>' +
+                    '</div>' +
+                    '</div>';
+
+                if (divid == '1') {
+                    $('#div1').append(card);
+                    divid = '2';
+                }
+                else {
+                    $('#div2').append(card);
+                    divid = '1';
+                }
+
+                BindUserGambling(value.MatchID);
+            });
+        }
+
+
+        function BindUserGambling(matchid) {
+            $.ajax({
+                url: '@Url.Action("UserGambling_Select", "Bookie")?MatchID='+matchid,
+                type: "GET",
+                dataType: "JSON",
+                dataSrc: '',
+                success: function (res) {
+                    SetDataToTable(res,matchid);
+                }
+            })
+        }
+
+        function SetDataToTable(res,matchid) {
+
+            var HomeAmount = 0;
+            var AwayAmount = 0;
+            var GoalUp = 0;
+            var GoalDown = 0;
+            var GoalChar = '';
+            $.each(res, function (key, value) {
+
+                if (value.BodyType == '1') {
+                    HomeAmount = HomeAmount + value.BodyAmount;
+                    var trow = '<tr><td>' + value.UserName + '</td><td>' + value.BodyAmount + '</td><td></td><td>' + value.GoalAmountChar + '</td></tr>'
+                    var tableBody = $('#tblMatch' + matchid + ' tbody')
+                    tableBody.append(trow);
+                }
+                else if (value.BodyType == '2') {
+                    AwayAmount = AwayAmount + value.BodyAmount;
+                    var trow = '<tr><td>' + value.UserName + '</td><td></td><td>' + value.BodyAmount + '</td><td>' + value.GoalAmountChar + '</td></tr>'
+                    var tableBody = $('#tblMatch'+matchid+' tbody');
+                    tableBody.append(trow);
+                }
+
+                if (value.GoalType == 1) {
+                    GoalUp = GoalUp + value.GoalAmount;
+                }
+                else if (value.GoalType == 2) {
+                    GoalDown = GoalDown + value.GoalAmount;
+                }
+            });
+
+            if (GoalUp > GoalDown) {
+                GoalChar = '↑' + (GoalUp - GoalDown);
+            }
+            else if (GoalDown > GoalUp) {
+                GoalChar = '↓' + (GoalDown - GoalUp);
+            }
+
+            var tableFoot = $('#tblMatch' + matchid + ' tfoot')
+            var trow = '<tr><td></td><td>' + HomeAmount + '</td><td>' + AwayAmount + '</td><td>' + GoalChar + '</td></tr>';
+            tableFoot.append(trow);
+        }
+
+        function GetLastMatch() {
+            $.ajax({
+                url: '@Url.Action("GetLastMatch", "Match")?MatchDate=' + $("#matchdate").val(),
+                type: "GET",
+                dataType: "JSON",
+                dataSrc: '',
+                success: function (res) {                   
+
+                    if (Object.keys(res).length > 0) {
+                        var matchDate = res[0].MatchDate;
+                        $('#matchdate').data('daterangepicker').setStartDate(matchDate);
+                        $('#matchdate').data('daterangepicker').setEndDate(matchDate);
+
+                        BindMatch();
+                    }
+                }
+            })
+        }
+
+        function GetPrevMatch() {
+            $.ajax({
+                url: '@Url.Action("GetPrevMatch", "Match")?MatchDate=' + $("#matchdate").val(),
+                type: "GET",
+                dataType: "JSON",
+                dataSrc: '',
+                success: function (res) {
+                    var matchDate;
+                    if (Object.keys(res).length > 0) {
+                        var matchDate = res[0].MatchDate;
+                        $('#matchdate').data('daterangepicker').setStartDate(matchDate);
+                        $('#matchdate').data('daterangepicker').setEndDate(matchDate);
+
+                        BindMatch();
+                    }
+                }
+            })
+        }
+
+        function GetNextMatch() {
+            $.ajax({
+                url: '@Url.Action("GetNextMatch", "Match")?MatchDate=' + $("#matchdate").val(),
+                type: "GET",
+                dataType: "JSON",
+                dataSrc: '',
+                success: function (res) {
+                    var matchDate;
+                    if (Object.keys(res).length > 0) {
+                        var matchDate = res[0].MatchDate;
+                        $('#matchdate').data('daterangepicker').setStartDate(matchDate);
+                        $('#matchdate').data('daterangepicker').setEndDate(matchDate);
+
+                        BindMatch();
+                    }
+                }
+            })
         }
     </script>
 }
