--- a/FGM/Views/Odds/MatchDetailInfo.cshtml
+++ b/FGM/Views/Odds/MatchDetailInfo.cshtml
@@ -17,12 +17,16 @@
                 <tr>
                     <th>ပွဲချိန်</th>
                     <th>Home</th>
-                    <th>Away</th>
+                    <th>Away</th> 
                 </tr>
             </thead>
             <tbody></tbody>
             <tfoot>
             </tfoot>
         </table>
+    </div>
+    <div class="card-footer">
+        <label>TT</label>
+        <label>1500</label>
     </div>
 </div>
