--- a/FGM/Views/Odds/OddsEntry.cshtml
+++ b/FGM/Views/Odds/OddsEntry.cshtml
@@ -11,39 +11,40 @@
 }
 
 <!-- Main content -->
-<section class="content">
-    <div class="card">
-        <div class="card-body">
-            <div class="form-row">
-                <div class="form-group col-xl-3 col-md-4">
-                    <label for="matchdate">ပွဲကစားသည့်နေ့</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button style="color:white" class="btn btn-danger" onclick="GetPrevMatch();" type="button">
-                                ☜
-                            </button>
-                            <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
-                        </div>
-                        <input readonly="readonly" type="text" class="form-control float-right" id="matchdate">
-                        <div class="input-group-append">
-                            <button style="color:white" class="btn btn-danger" onclick="GetNextMatch();" type="button">
-                                ☞
-                            </button>
+    <section class="content">
+        <div class="card">
+            <div class="card-body">
+                <div class="form-row">
+                    <div class="form-group col-xl-3 col-md-4">
+                        <label for="matchdate">ပွဲကစားသည့်နေ့</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <button style="color:white" class="btn btn-danger" onclick="GetPrevMatch();" type="button">
+                                    ☜
+                                </button>
+                                <span class="input-group-text text-custom2" id="basic-addon1"><i class="fa fa-calendar-alt"></i></span>
+                            </div>
+                            <input readonly="readonly" type="text" class="form-control float-right" id="matchdate">
+                            <div class="input-group-append">
+                                <button style="color:white" class="btn btn-danger" onclick="GetNextMatch();" type="button">
+                                    ☞
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div id="div1" class="col-xl-6">
+        <div class="row">
+            <div id="div1" class="col-xl-6">
 
-        </div>
-        <div id="div2" class="col-xl-6">
+            </div>
+            <div id="div2" class="col-xl-6">
 
+            </div>
         </div>
-    </div>
-</section>
+        
+    </section>
 
 @section Scripts{
     <script src="@Url.Content("~/plugins/daterangepicker/moment.min.js")"></script>
@@ -143,12 +144,24 @@
 
         function CalculateBookie(tableid) {
             var totalHome = 0;
+            var home = 0;
+            var totalAway = 0;
+            var away = 0;
             $("#" + tableid).find('tr').each(function (i, el) {
                 var $tds = $(this).find('td');
-                totalHome +=  Number($tds.eq(0).text());
+                if ($tds.eq(3).text())
+                    home = Number($tds.eq(3).text());
+                else
+                    home = 0;
+                totalHome += home;
+
+                if ($tds.eq(4).text())
+                    away = Number($tds.eq(4).text());
+                else
+                    away = 0;
+                totalAway += away;
             })
 
-            alert(totalHome);
         }
 
         function checkClick(chk, matchid) {           
